Fixed when url is not base64, fixed diagonal alignment

--- a/src/App.css
+++ b/src/App.css
@@ -74,8 +74,7 @@
   color: #282c34;
   background-color: white;
   position: relative;
-  /* font-size: 2.8vmin; */
-  font-size: 2.0vmin;
+  font-size: 2.5vmin;
   word-wrap: break-word;
   overflow: hidden;
   cursor: pointer;
